Add a real AI inference workload behind the PQC endpoint, package the guardrail Skill for reuse, re-baseline FFM benchmarks under JDK 25, fix bugs an audit found in the new code, add this project's first tests
This is the largest single change of the submission's final push, closing
the biggest risk two independent mock-judge audits both flagged: this
project had no actual AI workload anywhere, resting its "is this an AI
solution" Stage One argument entirely on prose. Sequenced per a
cross-verified plan (Opus proposed, Fable independently checked every
technical claim and the sequencing reasoning itself, both converged):
front-load the item that closes the pass/fail gate, bank smaller wins
around it.

## A real AI workload, verified end to end on real Arm64 hardware

New src/main/java/com/latticejack/pqc/aiproxy/ package: a one-shot
TLS-fronted inference gateway reusing this project's real hybrid
X25519MLKEM768 handshake (ProviderBootstrap, unmodified negotiation logic
- only two members widened from package-private to public, documented in
that file's own Javadoc) to front a local llama.cpp inference server.
Applied this project's own pqc-authoring checklist to the new code before
trusting it: passes cleanly, reuses the migrated bootstrap rather than
forking a second, independently-configured listener.

Built and verified twice, deliberately: first as a cheap local prototype
on this Mac (works out KleidiAI build flags, model format, TLS-proxy
plumbing before spending real VM time), then reproduced from scratch on
the actual Azure Cobalt 100 (Neoverse-N2) target. KleidiAI acceleration -
the whole point of doing this on Arm - was positively verified on the real
hardware, not assumed transferred from the Mac build: nm symbol check,
--verbose kernel-selection log (I8MM selected as primary on Neoverse-N2 vs
DOTPROD on Apple Silicon - a real, disclosed hardware difference), and a
non-zero CPU_KLEIDIAI weight-buffer size cross-check. The exact silent
-fallback trap this p